Edited wiki page through web user interface.

--- a/wiki/documentation.wiki
+++ b/wiki/documentation.wiki
@@ -17,7 +17,9 @@ System.out.println(result);
 the above example should print "hello you!". if an error ocurs a JsonRpcException will be thrown.
 
 = service handler =
-when you create a service handler you have to provide a context object. this object should provide the methods you want to call. the service handler is best used with a servlet. a simple one is provided and can be configured into a webapps web.xml like this:
+when you create a service handler you have to provide a context object. this object should provide the methods you want to call.
+== servlet ==
+the service handler is best used with a servlet. a simple one is provided and can be configured into a webapps web.xml like this:
 {{{
 <web-app>
   <servlet>
@@ -36,3 +38,6 @@ when you create a service handler you have to provide a context object. this obj
 }}}
 to configure the servlet you have to set the services parameter. it's a comma separated list of name = value pairs. the name is the contextname of the service, value is the name of the class. the contextname must be appended to the url. if a context named root is defined this service is called if you call the url without a context.
 if the context path of the webapp is "webservice", the url to call a method from the com.googlecode.jj1.crap.TestServices class is like "http://domain.xx/webservice/jj1/test". 
+
+== context objects ==
+to define a service you need to create a common java object. you can make some methods accessible from json-rpc by adding a @JsonRpc annotation. you can't call methods with no @JsonRpc annotation. if you use this context-object with the servlet it must have an empty constructur and must be listed in the services parameter.
